# atoqu

./: .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTORS.md  README.md
config/: config.json  engine.json  gpu.json  llm.json  modes.json  weights.json
docs/: CMakeLists.txt  architecture.html  cli.html  config.html  getting-started.html  http-api.html  index.html
docs/doxygen/: CMakeLists.txt  Doxyfile
docs/sphinx/: CMakeLists.txt  architecture.rst  conf.py  gpu.rst  index.rst  modes.rst  overview.rst  tests.rst
include/: AtoquEngine.hpp  BM25Mode.hpp  Config.hpp  CudaBackend.hpp  DocumentStore.hpp  EmbeddingCache.hpp  EmbeddingProvider.hpp  HashEmbeddingProvider.hpp  HipBackend.hpp  HybridMode.hpp  Indexer.hpp  LiteralMode.hpp  LlmEmbeddingProvider.hpp  Logger.hpp  MetalBackend.hpp  (+16 more)
src/: CMakeLists.txt  main.cpp
src/cache/: EmbeddingCache.cpp
src/core/: AtoquEngine.cpp  Config.cpp  Indexer.cpp  ModeFactory.cpp  Optimizer.cpp  PluginSystem.cpp  Query.cpp  Result.cpp
src/embedding/: HashEmbeddingProvider.cpp  LlmEmbeddingProvider.cpp
src/gpu/: GpuBackend.cpp
src/gpu/cuda/: CudaBackend.cpp  cosinekernel.cu
src/gpu/hip/: HipBackend.cpp
src/gpu/metal/: MetalBackend.cpp
src/gpu/opencl/: OpenClBackend.cpp
src/gpu/sycl/: SyclBackend.cpp
src/gpu/vulkan/: VulkanBackend.cpp
src/modes/: BM25Mode.cpp  HybridMode.cpp  LiteralMode.cpp  NormalMode.cpp  RecencyMode.cpp  SearchMode.cpp  TagBoostMode.cpp  VectorMode.cpp
src/server/: SimpleHttpServer.cpp
src/storage/: DocumentStore.cpp  Persistence.cpp  VectorStore.cpp
src/util/: Logger.cpp
(+23 files in other folders)
